# audio-mapper-assembly-system

./: .gitignore  audio_mapper.py  audio_service.py  color_scheme.py  commands.py  create_test_audio.py  file_handler.py  filmstrip_manager.py  history_manager.py  inline_generation_plan.md  marker_manager.py  marker_repository.py  pyproject.toml  requirements.txt  run.sh  sfx-categories.html  test_audio_playback.py  test_auto_assembly.py  test_elevenlabs_integration.py  test_enhanced_rows.py  test_polish.py  test_selection_sync.py  test_version_history_ui.py  tooltip.py  waveform_manager.py
config/: __init__.py  color_scheme.py
controllers/: __init__.py  video_player_controller.py
core/: __init__.py  categories.py  commands.py  marker_repository.py  models.py
docs/: ASSEMBLY_PLAN.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  METADATA_EXPORT_PLAN.md  MUSIC_ASSEMBLY_SPEC.md  README.md  REDESIGN_PLAN.md  REFACTORING_PLAN_BY_RISK.md  ROADMAP.md
managers/: __init__.py  filmstrip_manager.py  keyboard_manager.py  marker_manager.py  marker_selection_manager.py  version_manager.py  waveform_manager.py
services/: __init__.py  assembly_playback_service.py  assembly_service.py  audio_player.py  audio_service.py  elevenlabs_api.py
tests/: test_assemble_audio.py  test_audio_mapper.py  test_batch_operations.py  test_command_refactor.py  test_elevenlabs_integration.py  test_file_handler.py  test_filmstrip_manager.py  test_generation_button.py  test_models.py  test_version_history_ui.py  test_version_management.py  test_waveform_manager.py
utils/: __init__.py
(+28 files in other folders)
